# GSCrossPlatform

./: CMakeLists.txt  README.md  conanfile.py
include/GSCrossPlatform/: Array.h  Containers.h  CrossPlatform.h  Defines.h  Encoding.h  Exception.h  GS_CrossPlatform.h  GS_CrossPlatformContainers.h  GS_CrossPlatformDefines.h  GS_CrossPlatformException.h  GS_CrossPlatformIO.h  GS_CrossPlatformString.h  GS_CrossPlatformTypes.h  GS_CrossPlatformUnicodeConversions.h  GS_CrossPlatformUtils.h  IO.h  Map.h  Memory.h  Types.h  UException.h  UString.h  Utils.h  Vector.h
include/GSCrossPlatform/Containers/: Iterator.h  String.h
include/GSCrossPlatform/Encoding/: UnicodeEncodings.h
include/GSCrossPlatform/IO/: File.h  Handle.h  HandleTraits.h  IOStream.h  IOStreamTraits.h
include/GSCrossPlatform/Utils/: Defines.h  Exception.h  Types.h
src/: GS_CrossPlatformException.cpp  GS_CrossPlatformIO.cpp  GS_CrossPlatformString.cpp  IO.cpp  UString.cpp
src/Containers/: String.cpp
src/IO/: File.cpp  IOStream.cpp
src/Utils/: Exception.cpp
test/: CMakeLists.txt  GS_CrossPlatformStringTests.cpp  conanfile.py
